# ffmpuzzle-cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: app.rs  cli.rs  clipboard.rs  main.rs  tui.rs
src/api/: client.rs
src/data/: mod.rs  puzzles.rs  types.rs
src/game/: hints.rs  mod.rs  proximity.rs  share.rs  streak.rs  timer.rs
src/storage/: state.rs
src/ui/: game.rs  input.rs  leaderboard.rs  mod.rs  post_game.rs  result_grid.rs  splash.rs
